Closure_121/evosuite/fixing/evosuite-report-clz/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_121_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/1/com/google/javascript/jscomp/InlineVariables_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/1/com/google/javascript/jscomp/InlineVariables_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/0/com/google/javascript/jscomp/InlineVariables_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/0/com/google/javascript/jscomp/InlineVariables_ESTest_scaffolding.java >> evosuite-report-clz/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/0/com/google/javascript/jscomp/InlineVariables_ESTest.java:19: error: duplicate class: com.google.javascript.jscomp.InlineVariables_ESTest
public class InlineVariables_ESTest extends InlineVariables_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/0/com/google/javascript/jscomp/InlineVariables_ESTest_scaffolding.java:18: error: duplicate class: com.google.javascript.jscomp.InlineVariables_ESTest_scaffolding
public class InlineVariables_ESTest_scaffolding {
       ^
2 errors
